--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="flex-container">
+    <div class="container">
       
       <div class="flex-logo">
         <img src="./resources/images/ic-logo.svg" alt="logo of Colmar Academy"/>
@@ -23,10 +23,10 @@
       </nav>
 
       <nav class="mobile">
-        <img class="mobil-icon" src="./resources/images/ic-logo.svg" alt="Colmar Academy"/>
-        <img class="mobil-icon" src="./resources/images/ic-on-campus.svg" alt="on campus"/>
-        <img class="mobil-icon" src="./resources/images/ic-online.svg" alt="online"/>
-        <img class="mobil-icon" src="./resources/images/ic-login.svg" alt="sign in"/>
+        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy"/>
+        <img src="./resources/images/ic-on-campus.svg" alt="on campus"/>
+        <img src="./resources/images/ic-online.svg" alt="online"/>
+        <img src="./resources/images/ic-login.svg" alt="sign in"/>
       </nav>
 
     </div>
