Edit "Start Here" section

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     </div>
   </header>
   <!-- "Start Here" Section -->
-  <section id="main-banner">
+  <section id="start-here">
       <div class="container">
 
         <div class="left-box">
           <img src="./resources/images/banner.jpg" alt="students at table reading"/>
         </div>
         
-        <div class="right-box ">
+        <div class="right-box">
           <div class="tagline">
-            <h1>Learn something <br> new everyday</h1>
-            <h4>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</h4>
+            <h1>Learn something <br/> new  everyday</h1>
+            <h4>Lorem ipsum dolor sit amet,<br/> consectetur adipiscing elit.</h4>
             <a href="#" target="_blank">Start Here</a>
           </div>
         </div>
