Edit "Schedule" section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
           </div>
   
-          <div class="lecture box">
+          <div class="third-info box">
             <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="picture of lecturer"/>
             <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="picture of lecturer"/>
             <div class="content">
