--- a/index.html
+++ b/index.html
@@ -98,72 +98,73 @@
   <!-- Learning Section -->
   <section id="learn">
     <h2>Start Learning</h2>
-    
-    <div class="courses-desktop">
+    <div class="container">  
+      <div class="courses-desktop">
 
-      <div class="course">
-          <img src="./resources/images/course-software.jpg" alt="Software engineering"/>  
-          <div class="course-content">
-            <h6>Software engineering</h6>
-            <span>COURSES</span>
-            <p>Web Development, Mobile Development, iOT, APIs</p>
-          </div>
-      </div>
-
-      <div class="course">
-          <img src="./resources/images/course-computer-art.jpg" alt="Computer art"/>
-          <div class="course-content">
-            <h6>Computer art</h6>
-            <span>COURSES</span>
-            <p>Imaging &#38; Design, Web Design, Motion Graphics &#38; Visual Effects, Computer Animation</p>
-          </div>
+        <div class="course">
+            <img src="./resources/images/course-software.jpg" alt="Software engineering"/>  
+            <div class="course-content">
+              <h6>Software engineering</h6>
+              <span>COURSES</span>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
         </div>
 
         <div class="course">
-          <img src="./resources/images/course-design.jpg" alt="Design">      
-          <div class="course-content">
-            <h6>Design</h6>
-            <span>COURSES</span>
-            <p>User Expierence Deisgn, User Research, Visual Design</p>
+            <img src="./resources/images/course-computer-art.jpg" alt="Computer art"/>
+            <div class="course-content">
+              <h6>Computer art</h6>
+              <span>COURSES</span>
+              <p>Imaging &#38; Design, Web Design, Motion Graphics &#38; Visual Effects, Computer Animation</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resources/images/course-design.jpg" alt="Design">      
+            <div class="course-content">
+              <h6>Design</h6>
+              <span>COURSES</span>
+              <p>User Expierence Deisgn, User Research, Visual Design</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resources/images/course-data.jpg" alt="Data"/>
+            <div class="course-content">
+              <h6>Data</h6>
+              <span>COURSES</span>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resources/images/course-business.jpg" alt="Business"/>
+            <div class="course-content">
+              <h6>Business</h6>
+              <span>COURSES</span>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resources/images/course-marketing.jpg" alt="Marketing"/>
+            <div class="course-content">
+              <h6>Marketing</h6>
+              <span>COURSES</span>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
           </div>
         </div>
 
-        <div class="course">
-          <img src="./resources/images/course-data.jpg" alt="Data"/>
-          <div class="course-content">
-            <h6>Data</h6>
-            <span>COURSES</span>
-            <p>Data Science, Big Data, SQL, Data Visualization</p>
-          </div>
+        <div class="courses-list-mobile">
+          <a href="#">Software engineering</a>
+          <a href="#">Computer Art</a>
+          <a href="#">Design</a>
+          <a href="#">Data</a>
+          <a href="#">Business</a>
+          <a href="#">Marketing</a>
         </div>
-
-        <div class="course">
-          <img src="./resources/images/course-business.jpg" alt="Business"/>
-          <div class="course-content">
-            <h6>Business</h6>
-            <span>COURSES</span>
-            <p>Product Development, Business Development, Startup</p>
-          </div>
-        </div>
-
-        <div class="course">
-          <img src="./resources/images/course-marketing.jpg" alt="Marketing"/>
-          <div class="course-content">
-            <h6>Marketing</h6>
-            <span>COURSES</span>
-            <p>Analytics, Content Marketing, Mobile Marketing</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="courses-list-mobile">
-        <a href="#">Software engineering</a>
-        <a href="#">Computer Art</a>
-        <a href="#">Design</a>
-        <a href="#">Data</a>
-        <a href="#">Business</a>
-        <a href="#">Marketing</a>
-        </div>
+      </div>  
   </section>
 
   <!-- Thesis Section -->
