--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <span class="copyright">&copy; 2017  Colmar Academy, All Rights Reserved</span>
-      <nav class="desktop">
+      <span >&copy; 2017 Colmar Academy, All Rights Reserved</span>
+      <nav class="footer-nav">
         <a href="#">Terms</a>
         <a href="#">Privacy</a>
       </nav>
