More Footer edits

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img class="desktop" src="./resources/images/information-orientation.jpg" alt="picture of student on campus"/>
             <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="picture of student on campus"/>
             <div class="content">
-              <h6>Orintation Date</h6>
+              <h6>Orientation Date</h6>
               <p>Tues 10/11 &amp; Wed 10/12: 8am-3pm</p>
               <a href="#">Read more</a>
             </div>
@@ -85,7 +85,7 @@
             <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="picture of lecturer"/>
             <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="picture of lecturer"/>
             <div class="content">
-              <h6>Our gest lecture</h6>
+              <h6>Our guest lecture</h6>
               <p>Join a keynote with Oliver Sack about music about medical treatment</p>
               <a href="#">Read more</a>
             </div>
