--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
+  <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
+  <title>Colmar Academy</title> 
 </head>
 <body>
   <!-- Header -->
