--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
+  <header role="header">
     <div class="container">
       
       <div class="flex-logo">
@@ -25,16 +25,16 @@
       </nav>
 
       <nav class="mobile">
-        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy"/>
-        <img src="./resources/images/ic-on-campus.svg" alt="on campus"/>
-        <img src="./resources/images/ic-online.svg" alt="online"/>
-        <img src="./resources/images/ic-login.svg" alt="sign in"/>
+        <a href="#"><img src="./resources/images/ic-logo.svg" alt="Colmar Academy"/></a>  
+        <a href="#"></a><img src="./resources/images/ic-on-campus.svg" alt="on campus"/></a> 
+        <a href="#"></a><img src="./resources/images/ic-online.svg" alt="online"/></a> 
+        <a href="#"></a><img src="./resources/images/ic-login.svg" alt="sign in"/></a> 
       </nav>
 
     </div>
   </header>
   <!-- "Start Here" Section -->
-  <section id="start-here">
+  <section id="start-here" role="start-here">
       <div class="container">
 
         <div class="left-box">
@@ -52,7 +52,7 @@
     </section>
  
   <!-- Schedule Section -->
-  <section id="schedule">
+  <section id="schedule" role="schedule">
     <div class="container">
 
         <div class="left-box">
@@ -88,7 +88,7 @@
             <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="picture of lecturer"/>
             <div class="content">
               <h6>Our guest lecture</h6>
-              <p>Join a keynote with Oliver Sack about music about medical treatment</p>
+              <p>Join a keynote with Oliver Sack about music in medical treatment</p>
               <a href="#">Read more</a>
             </div>
           </div>
@@ -98,7 +98,7 @@
   </section>
 
   <!-- Learning Section -->
-  <section id="learn">
+  <section id="learn" role="learn">
     <h2>Start Learning</h2>
     <div class="container">  
       <div class="courses-desktop">
@@ -170,7 +170,7 @@
   </section>
 
   <!-- Thesis Section -->
-  <section id="thesis">
+  <section id="thesis" role="thesis">
     <h2>Thesis Exhibit</h2>
     <div class="container">
 
@@ -205,7 +205,7 @@
   </section>
 
   <!-- Footer -->
-  <footer>
+  <footer role="footer">
     <div class="container">
       <span>&copy; 2017 Colmar Academy, All Rights Reserved</span>
 
