Fix header icons

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       <nav class="mobile">
         <a href="#"><img src="./resources/images/ic-logo.svg" alt="Colmar Academy"/></a>  
-        <a href="#"></a><img src="./resources/images/ic-on-campus.svg" alt="on campus"/></a> 
-        <a href="#"></a><img src="./resources/images/ic-online.svg" alt="online"/></a> 
-        <a href="#"></a><img src="./resources/images/ic-login.svg" alt="sign in"/></a> 
+        <a href="#"><img src="./resources/images/ic-on-campus.svg" alt="on campus"/></a> 
+        <a href="#"><img src="./resources/images/ic-online.svg" alt="online"/></a> 
+        <a href="#"><img src="./resources/images/ic-login.svg" alt="sign in"/></a> 
       </nav>
 
     </div>
